Remove unused `removing-` plugin marker support